--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "vue": "^3.5.12"
   },
-  "devDependencies": {
+  "packageManager": "pnpm@8.15.9",
+  "devDependencies": {  
     "@ant-design/colors": "^7.1.0",
     "@mistjs/eslint-config": "^1.0.0",
     "@types/fs-extra": "^11.0.4",
